# omnidirectional_sense

./: .gitignore  .gitmodules  update_submodules.sh
.cache/clangd/index/: ai_detector.cpp.FB9ECF9A0A3501A0.idx  ai_detector.hpp.F9D9CFC8E7EAA9BC.idx  allocator.hpp.34C9B9E37F490528.idx  any.hpp.5227AE7ED28892D1.idx  assign.hpp.0E1A39A87F874DA5.idx  assign_base.hpp.F54342662F9277E9.idx  attr_types.hpp.8CFB05CD531DA8D5.idx  attribute_adapter.hpp.BE66723DF6E8FC93.idx  attribute_visitor.hpp.F5E486BCE14A7645.idx  axis_set.hpp.31AA91CAF068492A.idx  axis_vector.hpp.6341B91A34E8194E.idx  base_detector.hpp.14BE414363DBAD49.idx  bfloat16.hpp.49F7924D0C222507.idx  color_format.hpp.EE450738A8DF2AC1.idx  common.hpp.1E75C3DB6F33B98E.idx  compiled_model.hpp.492B12ECA9AAEE0B.idx  coordinate.hpp.2559F58A2B0387A1.idx  coordinate_diff.hpp.A8AD91C2992BCE36.idx  core.hpp.3687EA76E02312F3.idx  core.hpp.B65753DB01CA5F64.idx  core_visibility.hpp.FB3C36EE778C8F2B.idx  crc.cpp.9E71483741DF5DC5.idx  crc.hpp.0799564561FA0B0E.idx  deprecated.hpp.F562FA5B8F47E356.idx  detector_node.cpp.9E79C9D9B2CE6F25.idx  detector_node.hpp.B81ED5435141C7FD.idx  dimension.hpp.AB18CA1BC4626449.idx  element_type.hpp.B48A5B7B7F291558.idx  element_type_traits.hpp.C927B9D42C1DBCDB.idx  enum_mask.hpp.ABCB774CAC60AC4B.idx  enum_names.hpp.84920B7834D5D208.idx  except.hpp.5FEB6CBE5A6F4B07.idx  extension.hpp.B81188525A9D49DC.idx  firecontrol.hpp.3308B558C3690209.idx  firecontrol__builder.hpp.38049D08FE6D2F57.idx  firecontrol__struct.hpp.F9EC97FF351E50D9.idx  firecontrol__traits.hpp.5361B9E3F149147B.idx  firecontrol__type_support.hpp.46C7568406C0A375.idx  float16.hpp.B405D2CDEF8FB01F.idx  float4_e2m1.hpp.924E83B3EF94A8D8.idx  (+82 more)
src/armor_detector/: CMakeLists.txt  package.xml
src/armor_detector/include/armor_detector/: ai_detector.hpp  ai_kernels.hpp  ba_solver.hpp  base_detector.hpp  detector.hpp  detector_node.hpp  gpu_image.hpp  gpu_image_type_adapter.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  number_classifier.hpp  pnp_solver.hpp  types.hpp
src/armor_detector/src/: ai_detector.cpp  ai_kernels.cu  ba_solver.cpp  detector.cpp  detector_node.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp  pnp_solver.cpp
src/armor_detector/test/: test_node_startup.cpp  test_number_cls.cpp
src/auto_aim_interfaces/: CMakeLists.txt
src/gpu_cam_minimal/: CMakeLists.txt  README.md  package.xml
src/gpu_cam_minimal/include/gpu_cam_minimal/: jetson_mjpeg_decoder.hpp  nvdec_mjpeg_decoder.hpp
src/gpu_cam_minimal/launch/: gpu_cam_minimal.launch.py
src/gpu_cam_minimal/src/: gpu_cam_minimal_node.cpp  jetson_mjpeg_decoder.cpp  nvdec_mjpeg_decoder.cpp
src/rm_gimbal_description/: README.md
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_serial_driver/: .clang-format  CMakeLists.txt  package.xml
src/rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp  virtual_serial_node.cpp
src/video_reader/: CMakeLists.txt  package.xml
src/video_reader/include/video_reader/: gpu_image.hpp  gpu_image_type_adapter.hpp  video_reader_node.hpp
src/video_reader/src/: video_reader_node.cpp
src/vision_bringup/rm_vision_bringup/: package.xml
src/vision_bringup/rm_vision_bringup/config/: launch_params.yaml  node_params.yaml
src/vision_bringup/rm_vision_bringup/launch/: common.py  vision_bringup.launch.py
third_party_install/: local_setup.sh  setup.sh
third_party_install/lib/: libopenvino.so.2430  libopenvino_c.so.2024.3.0  libopenvino_c.so.2430  libopenvino_ir_frontend.so.2024.3.0  libopenvino_ir_frontend.so.2430  libopenvino_onnx_frontend.so.2430  libopenvino_paddle_frontend.so.2024.3.0  libopenvino_paddle_frontend.so.2430  libopenvino_pytorch_frontend.so.2024.3.0  libopenvino_pytorch_frontend.so.2430  libopenvino_tensorflow_frontend.so.2430  libopenvino_tensorflow_lite_frontend.so.2024.3.0  libopenvino_tensorflow_lite_frontend.so.2430
third_party_install/lib/cmake/openvino2024.3.0/: OpenVINOConfig.cmake  OpenVINOTargets-release.cmake  OpenVINOTargets.cmake
third_party_install/lib/pkgconfig/: openvino.pc
third_party_install/share/ament_index/resource_index/parent_prefix_path/: cv_bridge
third_party_install/share/cv_bridge/: local_setup.sh  package.sh
third_party_install/share/cv_bridge/cmake/: cv_bridge-extras.cmake
third_party_install/share/image_geometry/: local_setup.sh  package.sh
third_party_install/share/lintian/overrides/: libopenvino-2024.3.0  libopenvino-ir-frontend-2024.3.0  libopenvino-onnx-frontend-2024.3.0  libopenvino-paddle-frontend-2024.3.0  libopenvino-pytorch-frontend-2024.3.0  libopenvino-tensorflow-frontend-2024.3.0  libopenvino-tensorflow-lite-frontend-2024.3.0  openvino
